data/derived/fa15/progs/unify/prog2588.ml.out
Characters 124-126:
  (a1 @ [(x1+x2+c')/10],a2 @ [(x1+x2+c') mod 10]) in 
                ^^
Error: This expression has type 'a list
       but an expression was expected of type int
